# Reinforcement-Learning-Course

./: Dynamic_programming_avg_reward_per_timestep.txt  README.md  pyproject.toml  requirements.txt
Assignments/TRL/src/: Agent.py  DynamicProgramming.py  Environment.py  Experiment.py  Helper.py  MonteCarlo.py  Nstep.py  Q_learning.py  SARSA.py  SaveResults.py  plot_results.py
Assignments/TRL/src/results/: mc_learning_rate_0_03_gamma_1_policy_egreedy_epsilon_0_2_temp_1_n_10_eval_interval_1000.csv  mc_learning_rate_0_1_gamma_1_policy_egreedy_epsilon_0_05_temp_1_n_10_eval_interval_1000.csv  nstep_learning_rate_0_03_gamma_1_policy_egreedy_epsilon_0_2_temp_1_n_10_eval_interval_1000.csv  nstep_learning_rate_0_03_gamma_1_policy_egreedy_epsilon_0_2_temp_1_n_1_eval_interval_1000.csv  (+14 more)
results/: mc_learning_rate_0_1_gamma_1_policy_egreedy_epsilon_0_05_temp_1_n_10_eval_interval_1000.csv  nstep_learning_rate_0_1_gamma_1_policy_egreedy_epsilon_0_05_temp_1_n_10_eval_interval_1000.csv  nstep_learning_rate_0_1_gamma_1_policy_egreedy_epsilon_0_05_temp_1_n_1_eval_interval_1000.csv  nstep_learning_rate_0_1_gamma_1_policy_egreedy_epsilon_0_05_temp_1_n_3_eval_interval_1000.csv  q_learning_rate_0_1_gamma_1_policy_egreedy_epsilon_0_3_temp_1_n_5_eval_interval_1000.csv  sarsa_learning_rate_0_03_gamma_1_policy_egreedy_epsilon_0_1_temp_1_n_5_eval_interval_1000.csv  sarsa_learning_rate_0_1_gamma_1_policy_egreedy_epsilon_0_1_temp_1_n_5_eval_interval_1000.csv  sarsa_learning_rate_0_3_gamma_1_policy_egreedy_epsilon_0_1_temp_1_n_5_eval_interval_1000.csv
