[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 60
